@@ -143,9 +143,16 @@ private define test_sigprocmask ()
 }
 
 test_signal (SIGHUP, &handle_hup);
-test_sigalarm ();
-test_getsetitimer ();
-test_sigsuspend ();
+
+$1 = getenv ("SLSYSCALL_TEST");
+
+if (($1 == NULL) || (atoi ($1) == 0))
+{
+   test_sigalarm ();
+   test_getsetitimer ();
+   test_sigsuspend ();
+}
+
 test_sigprocmask ();
 
 print ("Ok\n");
